Fixes spacing between buttons in the palette-container.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -995,7 +995,7 @@ footer {
   align-items: center;
   display: flex;
   flex-direction: column;
-  margin-bottom: 6px;
+  margin: 6px auto;
   width: 100%;
 }
 
